# Aronda-RL

./: .travis.yml  CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/state/: parser.cpp  parser.hpp  state.hpp
lib/utils/: matrix.hpp  strongtype.hpp
trained networks/: basic_MLP_2x512.mod
trainer/: CMakeLists.txt  agent.cpp  agent.hpp  brain.cpp  brain.hpp  cntkbrain.cpp  cntkbrain.hpp  curlwrapper.cpp  curlwrapper.hpp  ibrain.cpp  ibrain.hpp  igame.cpp  igame.hpp  jaronda.cpp  jaronda.hpp  main.cpp  memory.hpp  random.hpp  types.hpp
travis-scripts/: build.sh  dependencies.sh
unit_tests/: CMakeLists.txt  test_parsing_state_from_json.cpp
unit_tests_data/: empty.json  one-move.json
