cmake_minimum_required(VERSION 3.2)
project(Aronda-RL)

include_directories(3rd_party/catch2)
include_directories(3rd_party/range)
if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
	message("using visual")
	add_compile_options("/std:c++latest")
	add_definitions("-DBOOST_CONFIG_SUPPRESS_OUTDATED_MESSAGE")
else()
	message("using ${CMAKE_CXX_COMPILER_ID}")
	add_definitions("-std=c++17")
	add_definitions("-fprofile-arcs")
	add_definitions("-ftest-coverage")
	set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} --coverage" )
endif()

set(AR_CNTK_VERSION "2.4" CACHE STRING "Use specific CNTK version?")

set(AR_GSL_PATH "" CACHE PATH "Path for GSL header files.")
if(AR_GSL_PATH)
	include_directories(${AR_GSL_PATH})
endif()

set(AR_BOOST_PATH "" CACHE PATH "Path for boost directory.")
if(AR_BOOST_PATH)
	include_directories(${AR_BOOST_PATH})
endif()

set(AR_EINGEN_INCLUDE_DIR "" CACHE PATH "Use specific Eigen include folder?")
if(NOT "${AR_EINGEN_INCLUDE_DIR}" STREQUAL "")
	include_directories("${AR_EINGEN_INCLUDE_DIR}")
endif()

set(AR_CNTK_ROOT_DIR "" CACHE PATH "Use specific CNTK folder?")
if(NOT "${AR_CNTK_ROOT_DIR}" STREQUAL "")
	include_directories("${AR_CNTK_ROOT_DIR}/Include")
	link_directories("${AR_CNTK_ROOT_DIR}/cntk")
endif()

set(AR_CURL_ROOT_DIR "" CACHE PATH "Use specific curl folder?")
if(NOT "${AR_CURL_ROOT_DIR}" STREQUAL "")
	include_directories("${AR_CURL_ROOT_DIR}/include")
	link_directories("${AR_CURL_ROOT_DIR}/lib")
endif()

add_subdirectory(lib)
add_subdirectory(unit_tests)
add_subdirectory(trainer)
